--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,12 +7,12 @@
         android:title="@string/title_home" />
 
     <item
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_wallet"
         android:icon="@drawable/baseline_credit_card_24"
         android:title="@string/title_wallet" />
 
     <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_recommended"
         android:icon="@drawable/ic_dashboard_black_24dp"
         android:title="@string/title_recommended" />
 
