--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -12,8 +12,8 @@
         tools:context=".ui.wallet.WalletFragment">
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/wallet_recyclerview"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 tools:listitem="@layout/recyclerview_item"
                 app:layout_constraintBottom_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
