--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -27,11 +27,11 @@
         android:id="@+id/navigation_recommended"
         android:name="com.example.android.pointmax.ui.recommended.RecommendedFragment"
         android:label="@string/title_recommended"
-        tools:layout="@layout/fragment_recommended" />
+        tools:layout="@layout/fragment_recommended"/>
     <fragment
         android:id="@+id/addCardToWalletFragment"
         android:name="com.example.android.pointmax.ui.AddCardToWallet.AddCardToWalletFragment"
-        android:label="fragment_add_card_to_wallet"
+        android:label="@string/title_Add_Card_To_Wallet"
         tools:layout="@layout/fragment_add_card_to_wallet" >
         <action
             android:id="@+id/action_addCardToWalletFragment_to_navigation_wallet"
