--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -8,7 +8,7 @@
         android:layout_height="wrap_content">
         <TextView
             android:id="@+id/textView"
-            style="@style/word_title"
+            style="@style/card_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@android:color/holo_orange_light" />
