--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -30,7 +30,7 @@
         tools:layout="@layout/fragment_recommended"/>
     <fragment
         android:id="@+id/addCardToWalletFragment"
-        android:name="com.example.android.pointmax.ui.AddCardToWallet.AddCardToWalletFragment"
+        android:name="com.example.android.pointmax.ui.wallet.AddCardToWalletFragment"
         android:label="@string/title_Add_Card_To_Wallet"
         tools:layout="@layout/fragment_add_card_to_wallet" >
         <action
