--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -15,7 +15,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
             />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
