Changed editView name to new_card_name

--- a/app/src/main/res/layout/fragment_add_card_to_wallet.xml
+++ b/app/src/main/res/layout/fragment_add_card_to_wallet.xml
@@ -8,7 +8,7 @@
 
 
     <EditText
-        android:id="@+id/card_name"
+        android:id="@+id/new_card_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/card_name"
+        app:layout_constraintTop_toBottomOf="@id/new_card_name"
         app:layout_constraintStart_toStartOf="parent"
         android:text="@string/add_card_done"
         />
