--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -10,9 +10,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/card_name"
                 style="@style/card_title"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@android:color/holo_orange_light"
                 app:layout_constraintStart_toStartOf="parent"
@@ -20,17 +20,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginBottom="@dimen/activity_vertical_margin"
                 />
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:clickable="true"
-                android:focusable="true"
-                android:src="@drawable/ic_add_black_24dp"
-                app:layout_constraintStart_toEndOf="@id/textView"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@id/textView"
-                app:layout_constraintBottom_toBottomOf="@id/textView"
-                android:contentDescription="@string/delete_card" />
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
