Added CardDetailsFragment and ViewModel

--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -14,6 +14,7 @@
                 style="@style/card_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:onClick="cardDetails"
                 android:background="@android:color/holo_orange_light"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
