--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -11,7 +11,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.wallet.WalletFragment">
+        tools:context="com.example.android.pointmax.MainActivity">
 
         <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/wallet_recyclerview"
@@ -22,7 +22,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="parent"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:listData="@{viewModel.allCards}"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
