Attempting to perform transfer arguments between fragments

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -45,5 +45,9 @@
     <fragment
         android:id="@+id/cardDetailsFragment"
         android:name="com.example.android.pointmax.ui.card_details.CardDetailsFragment"
-        tools:layout="@layout/fragment_card_details" />
+        tools:layout="@layout/fragment_card_details" >
+        <argument
+            android:name="selectedCard"
+            app:argType="com.example.android.pointmax.ui.database.Card"/>
+    </fragment>
 </navigation>
