Changed CardDetail args to be of type String to allow for passing of the card name to the view as text

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -48,6 +48,7 @@
         tools:layout="@layout/fragment_card_details" >
         <argument
             android:name="selectedCard"
-            app:argType="com.example.android.pointmax.ui.database.Card"/>
+            app:argType="string"
+            />
     </fragment>
 </navigation>
