Removed wallet label from card details view

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -45,6 +45,7 @@
     <fragment
         android:id="@+id/cardDetailsFragment"
         android:name="com.example.android.pointmax.ui.card_details.CardDetailsFragment"
+        android:label=" "
         tools:layout="@layout/fragment_card_details" >
         <argument
             android:name="selectedCard"
