--- a/app/src/main/res/layout/fragment_card_details.xml
+++ b/app/src/main/res/layout/fragment_card_details.xml
@@ -13,7 +13,7 @@
         tools:context=".ui.card_details.CardDetailsFragment">
 
         <TextView
-            android:id="@+id/text_recommended"
+            android:id="@+id/current_card"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -34,11 +34,11 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="38dp"
-            android:text="Edit"
+            android:text="@string/edit"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/delete_button"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/text_recommended" />
+            app:layout_constraintTop_toBottomOf="@id/current_card" />
 
         <Button
             android:id="@+id/delete_button"
@@ -46,11 +46,11 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:text="Delete"
+            android:text="@string/delete"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.188"
             app:layout_constraintStart_toEndOf="@+id/edit_button"
-            app:layout_constraintTop_toBottomOf="@+id/text_recommended" />
+            app:layout_constraintTop_toBottomOf="@id/current_card" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
