--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -54,5 +54,8 @@
         <action
             android:id="@+id/action_cardDetailsFragment_to_navigation_wallet"
             app:destination="@id/navigation_wallet" />
+        <action
+            android:id="@+id/action_cardDetailsFragment_to_addCardToWalletFragment"
+            app:destination="@id/addCardToWalletFragment" />
     </fragment>
 </navigation>
