--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -36,11 +36,17 @@
         android:name="com.example.android.pointmax.ui.add_card.AddCardToWalletFragment"
         android:label="@string/title_Add_Card_To_Wallet"
         tools:layout="@layout/fragment_add_card_to_wallet" >
+        <argument
+            android:name="cardToEdit"
+            app:argType="string"/>
         <action
             android:id="@+id/action_addCardToWalletFragment_to_navigation_wallet"
             app:destination="@id/navigation_wallet"
             app:popUpTo="@id/navigation_wallet"
             app:popUpToInclusive="false" />
+        <action
+            android:id="@+id/action_addCardToWalletFragment_to_cardDetailsFragment"
+            app:destination="@id/cardDetailsFragment" />
     </fragment>
     <fragment
         android:id="@+id/cardDetailsFragment"
